fix title spacing on small screen

--- a/custom.scss
+++ b/custom.scss
@@ -168,8 +168,6 @@ footer.footer .nav-footer {
     font-size: 1.8em;
     font-weight: 500;
     line-height: 1;
-    padding-left: 3.5em;
-    padding-right: 3.5em;
 }
 
 /* tools, topics and guides listing and accent color */
